5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1644_1053.log
== SUBMITION (2019-04-09 16:28:29) 
-- CODE:
nome = float(input())
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.142087
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:28:37) 
-- CODE:
nome = float(input(""))
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.144847
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:38) 
-- CODE:
nome = float(input(""))
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:34) 
-- CODE:
nome = float(input(""))
if (nome = "cervo"):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "nome nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:30:58) 
-- CODE:
nome = float(input(""))
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.150848
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:31:00) 
-- CODE:
nome = float(input(""))
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:31:00) 
-- CODE:
nome = float(input(""))
if (nome = cervo):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.131588
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome = cervo):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:28) 
-- CODE:
nome = float(input(""))
if nome = cervo:
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if nome = cervo:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:32:29) 
-- CODE:
nome = float(input(""))
if nome = cervo:
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.133659
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if nome = cervo:
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:30) 
-- CODE:
nome = float(input(""))
if nome = cervo:
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if nome = cervo:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:44) 
-- CODE:
nome = float(input(""))
if (nome)
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:45) 
-- CODE:
nome = float(input(""))
if (nome)
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.237144
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:47) 
-- CODE:
nome = float(input(""))
if (nome)
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:34:06) 
-- CODE:
nome = float(input(""))
if (nome == cervo)
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.214811
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome == cervo)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:34:33) 
-- CODE:
nome = float(input(""))
if (nome == "cervo")
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome == "cervo")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:35:24) 
-- CODE:
nome = float(input(""))
if (nome == "cervo")
mensagem = "eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome == "cervo")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:37) 
-- CODE:
nome = float(input(""))
if (nome == "cervo")
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.152449
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (nome == "cervo")
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:36:07) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.221511
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 3
    mensagem = "cervo eh patrono do Harry Potter"
           ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:07) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
mensagem = "cervo eh patrono do Harry Potter"
else: 
mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 3
    mensagem = "cervo eh patrono do Harry Potter"
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:36:43) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
  mensagem = "cervo eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.181489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 1, in <module>
    nome = float(input(""))
ValueError: could not convert string to float: 'cervo'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:56) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
  mensagem = "cervo eh patrono do harry potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input(""))
ValueError: could not convert string to float: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:37:00) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
  mensagem = "cervo eh patrono do harry potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.213841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 1, in <module>
    nome = float(input(""))
ValueError: could not convert string to float: 'cervo'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:08) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
  mensagem = "cervo eh patrono do harry potter"
else: 
  mensagem = "<nome> nao eh patrono do harry potter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = float(input(""))
ValueError: could not convert string to float: 'cervo'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:37:10) 
-- CODE:
nome = float(input(""))
if (nome == "cervo"):
  mensagem = "cervo eh patrono do harry potter"
else: 
  mensagem = "<nome> nao eh patrono do harry potter"
print(mensagem)
-- EXECUTION TIME:
0.197467
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/1053/main.py", line 1, in <module>
    nome = float(input(""))
ValueError: could not convert string to float: 'cervo'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:28) 
-- CODE:
nome =(input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (nome == "cervo"):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:37) 
-- CODE:
nome =input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:38:38) 
-- CODE:
nome =input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.191179
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<nome> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:38:41) 
-- CODE:
nome = input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.151677
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<nome> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:38:54) 
-- CODE:
nome = input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.186253
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<nome> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:57) 
-- CODE:
nome = input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:59) 
-- CODE:
nome = input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "<nome> nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:39:15) 
-- CODE:
nome = input("")
if (nome == "cervo"):
  mensagem = "eh patrono do Harry Potter"
else: 
  mensagem = "nao eh patrono do Harry Potter"
print(nome,mensagem)
-- EXECUTION TIME:
0.162815
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
